# routes/lokasiRoutes.js
@@ -1,13 +1,13 @@
-const express = require('express');
+const express = require("express");
 const router = express.Router();
-const auth = require('../middleware/authMiddleware');
-const lokasiController = require('../controllers/lokasiController');
+const auth = require("../middleware/authMiddleware");
+const lokasiController = require("../controllers/lokasiController");
 
 // Endpoint CRUD Lokasi
-router.post('/lokasi', auth, lokasiController.createLokasi);  // Membutuhkan token JWT
-router.get('/lokasi', auth, lokasiController.getAllLokasi);    // Membutuhkan token JWT
-router.get('/lokasi/:id', auth, lokasiController.getLokasiById);  // Membutuhkan token JWT
-router.put('/lokasi/:id', auth, lokasiController.updateLokasi);   // Membutuhkan token JWT
-router.delete('/lokasi/:id', auth, lokasiController.deleteLokasi);  // Membutuhkan token JWT
+router.post("/", auth, lokasiController.createLokasi); // Membutuhkan token JWT
+router.get("/", auth, lokasiController.getAllLokasi); // Membutuhkan token JWT
+router.get("/:id", auth, lokasiController.getLokasiById); // Membutuhkan token JWT
+router.put("/:id", auth, lokasiController.updateLokasi); // Membutuhkan token JWT
+router.delete("/:id", auth, lokasiController.deleteLokasi); // Membutuhkan token JWT
 
 module.exports = router;
